# coevolved

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: llm-validation-retry.md
src/coevolved/: __init__.py
src/coevolved/base/: __init__.py  checkpoint.py  compose.py  interrupt.py  policy.py  step.py  tracing.py
src/coevolved/base/sinks/: __init__.py  console.py  jsonl.py
src/coevolved/core/: __init__.py  events.py  formatters.py  llm.py  llm_repair.py  llm_sequence.py  prompt.py  repair.py  tools.py  types.py
src/coevolved/core/providers/: __init__.py  claude.py  openai.py
src/coevolved/prebuilt/: __init__.py  context.py  events.py  formatters.py  llm_retry.py  loop.py  react.py  retry.py
tests/: __init__.py  test_llm_repair.py  test_prebuilt_retry.py
tests/core/llm_repair/: test_llm_repair.py
tests/core/providers/: test_claude_provider.py
tests/prebuilt/: test_llm_retry.py
